# Group_Tracking_Tool

./: .env.example  .gitignore  CMakeLists.txt  CMakeSettings.json  Dependencies.cmake  README.md  gpch.h
.github/workflows/: cmake-single-platform.yml
.history/: CMakePresets_20260708091224.json
.history/App/Source/: RegisterLayer_20260708072932.cpp  RegisterLayer_20260708074447.cpp  RegisterLayer_20260708074544.cpp  RegisterLayer_20260708074607.cpp  RegisterLayer_20260708074825.cpp  RegisterLayer_20260708074854.cpp  RegisterLayer_20260708074914.cpp  RegisterLayer_20260708075227.cpp  RegisterLayer_20260708075301.cpp  RegisterLayer_20260708075324.cpp  RegisterLayer_20260708082515.h  RegisterLayer_20260708082630.cpp  RegisterLayer_20260708082701.cpp  RegisterLayer_20260708083629.cpp  RegisterLayer_20260708084434.cpp  RegisterLayer_20260708085621.cpp  RegisterLayer_20260708090100.cpp  RegisterLayer_20260708090116.cpp  RegisterLayer_20260708090123.cpp  RegisterLayer_20260708090256.cpp  RegisterLayer_20260708090309.cpp  RegisterLayer_20260708090759.cpp  RegisterLayer_20260708093505.h  RegisterLayer_20260708093528.cpp  RegisterLayer_20260708210435.cpp  RegisterLayer_20260708211058.h  RegisterLayer_20260708211251.h  RegisterLayer_20260708211639.cpp  RegisterLayer_20260708212124.cpp  RegisterLayer_20260708212253.cpp  RegisterLayer_20260708212338.cpp  RegisterLayer_20260708212406.cpp  RegisterLayer_20260708212452.cpp  RegisterLayer_20260708212607.cpp  RegisterLayer_20260708213116.cpp  RegisterLayer_20260708213131.cpp  RegisterLayer_20260708213437.cpp  RegisterLayer_20260708213845.cpp  RegisterLayer_20260708214023.cpp  RegisterLayer_20260708214146.cpp  (+3 more)
.history/Core/Source/Service/: AuthService_20260708085229.cpp  AuthService_20260708085301.cpp  AuthService_20260708085707.cpp  AuthService_20260708085931.cpp  AuthService_20260708090000.cpp  AuthService_20260708120719.cpp
App/: CMakeLists.txt
App/Source/: AppLayoutLayer.cpp  AppLayoutLayer.h  DashboardLayer.cpp  DashboardLayer.h  LoginLayer.cpp  LoginLayer.h  Main.cpp  NotificationLayer.cpp  NotificationLayer.h  RegisterLayer.cpp  RegisterLayer.h  VoidLayer.cpp  VoidLayer.h
App/Source/.history/: RegisterLayer_20260708072932.h
App/Source/Authentication/: AuthenticationLayer.cpp  AuthenticationLayer.h  LoginLayer.cpp  LoginLayer.h  LoginView.h  RegisterLayer.cpp  RegisterLayer.h  RegisterView.h
App/Source/Authentication/Views/: LoginView.cpp  RegisterView.cpp
App/Source/Dashboard/: DashboardLayer.cpp  DashboardLayer.h
App/Source/Project/: ProjectLayer.cpp  ProjectLayer.h
App/Source/Project/Views/: ChartView.cpp  ChartView.h  MemberView.cpp  MemberView.h  MilestonesView.cpp  MilestonesView.h  TasksView.cpp  TasksView.h  WorkloadView.cpp  WorkloadView.h
Core/: CMakeLists.txt
Core/Source/: Application.cpp  Application.h  Layer.cpp  Layer.h  Window.cpp  Window.h
Core/Source/Database/: Database.cpp  Database.h
Core/Source/Platform/: Application.cpp  Application.h  Layer.h  Window.cpp  Window.h
Core/Source/Service/: AuthService.cpp  AuthService.h  ProjectService.cpp  ProjectService.h
Core/Source/Utils/: Assert.h  Log.cpp  Log.h  ProjectUtils.cpp  ProjectUtils.h  Random.h  TimeUtils.cpp  TimeUtils.h
